@@ -21,6 +21,11 @@
       <artifactId>spring-boot-starter-web</artifactId>
       <version>3.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.4.14</version>
+    </dependency>
 
     <!-- ADK -->
     <dependency>
@@ -74,7 +79,6 @@
           <target>21</target>
           <encoding>UTF-8</encoding>
           <compilerArgs>
-            <arg>--enable-preview</arg>
             <arg>-parameters</arg>
           </compilerArgs>
         </configuration>
